--- a/main.css
+++ b/main.css
@@ -1,3 +1,14 @@
 body {
  font-family: sans-serif;
 }
+
+.container{
+    display: flex
+}
+
+.box {
+    height: 100px;
+    width: 100px;
+    border: 15px solid pink;
+    margin: 10px
+}
